--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,6 +6,7 @@
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -18,24 +19,23 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
-
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ 
  html {
   font-family: sans-serif;
- }
-  body {
-  font-family: 'Source Sans Pro';
-  margin-top: 120px
  }
  nav {
   font-family: 'Bungee', cursive;
 padding: 50px ;
  }
-
+ body {
+  font-family: 'Source Sans Pro';
+  margin-top: 120px
+ }
  main {
    width: 90%;
    display: flex;
@@ -45,16 +45,32 @@ padding: 50px ;
    background-color:  #f4f1ec;
    margin: 0 auto; 
   }
-  #error-msg{
-    color: #D8000C;
-    background-color: #FFD2D2;
-    margin:10px 22px;
-    font-size:2em;
-    vertical-align:middle;
-    border-radius:.5em;
-    box-shadow:1px 1px 3px #888;
-  }
-
+#error-msg{
+  color: #D8000C;
+  background-color: #FFD2D2;
+  margin:10px 22px;
+  font-size:1em;
+  vertical-align:middle;
+  border-radius:.5em;
+  box-shadow:1px 1px 3px #888;
+}
 .red{
   color: red;
+}
+
+@media only screen and (min-width: 1024px){
+  body{
+    display: flex;
+    flex-direction: row;
+  }
+  .main-header{
+      
+      width: 10%;
+      float: left;
+  margin: 90px;
+  }
+  .container{
+    width: 90%;
+    float: right;
+  }
 }
