--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,8 +9,27 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1.5em;
 }
 
+.nav-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.nav-right a span {
+  display: flex;
+  align-items: center;
+  font-family: 'Source Sans Pro';
+  font-size: 1em;
+  color: white;
+}
+
+.nav-right i {
+  display: flex;
+  align-items: center;
+}
 span {
   font-family: 'Bungee', cursive;
 }
